make search bar full width, correct squished images on initial load

--- a/src/app/styles/main.scss
+++ b/src/app/styles/main.scss
@@ -10,10 +10,6 @@ button { padding: 8px; }
     width: 100%;
 }
 
-.width-50 {
-    width: 50%;
-}
-
 .no-outline-focus * {
     outline: none;
 }
